tests/algorithms/x/Java/maths/numerical_analysis/runge_kutta_gills.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden618_runge_kutta_gills4190560247/001/Main.java:57: error: incompatible types: double[] cannot be converted to Object[]
            System.out.println(_p(_geto(y1, y1.length - 1)));
                                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
